--- a/src/main/resources/templates/coviddashboard.html
+++ b/src/main/resources/templates/coviddashboard.html
@@ -4,8 +4,14 @@
 	<meta charset="ISO-8859-1">
 	<title>List Users</title>
 	<link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
-	<script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
+<!--	<script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>-->
 	<script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js"
+			integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT"
+			crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="https://cdn.datatables.net/1.10.25/css/jquery.dataTables.min.css">
+	<script src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.min.js" ></script>
+
 </head>
 <body>
 <div class="container text-center">
@@ -22,7 +28,7 @@
 	</div>
 	
 	<div>
-		<table class="table table-striped table-bordered">
+		<table class="table table-striped table-bordered" id="myTable">
 			<thead class="thead-dark">
 				<tr>
 					<th>Country</th>
@@ -46,7 +52,14 @@
 				</tr>
 			</tbody>
 		</table>
+
 	</div>
+
+	<script>
+    $(document).ready( function () {
+    $('#myTable').DataTable();
+	} );
+    </script>
 </div>
 </body>
 </html>
