--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,9 +10,9 @@
 <body>
 	<div class="container text-center">
 		<h1>Welcome!</h1>
-		<h3><a th:href="@{/coviddashboard}">Covid-19 Dashboard</a></h3>
-		<h3><a th:href="@{/register}">Register</a></h3>
-		<h3><a th:href="@{/login}">Login</a></h3>
+		<h3><a href="/coviddashboard">Covid-19 Dashboard</a></h3>
+		<h3><a href="/register">Register</a></h3>
+		<h3><a href="/login">Login</a></h3>
 	</div>
 	
 </body>
